--- a/tracker.html
+++ b/tracker.html
@@ -25,6 +25,7 @@
 </head>
 <body class="bg-beige min-h-screen font-sans">
     <div class="container mx-auto px-4 py-8 max-w-4xl">
+        <!-- Header -->
         <div class="text-center mb-8">
             <div class="flex justify-between items-center mb-2">
                 <div id="welcomeMessage" class="text-left text-medium-brown"></div>
@@ -34,6 +35,7 @@
             <p class="text-medium-brown text-lg">Keep track of your favorite shows, rate them, and add notes</p>
         </div>
 
+        <!-- Add Show Form -->
         <div class="bg-white rounded-lg shadow-lg p-6 mb-8 border-2 border-light-green">
             <h2 class="text-2xl font-semibold text-dark-green mb-4">Add New Show</h2>
             <form id="addShowForm">
@@ -69,22 +71,37 @@
             </form>
         </div>
 
-        <div id="filter-container" class="flex flex-wrap gap-2 mb-6">
-             <button data-filter="all" class="px-4 py-2 rounded-lg font-medium transition-colors duration-200 bg-dark-green text-white">All Shows</button>
-            <button data-filter="watching" class="px-4 py-2 rounded-lg font-medium transition-colors duration-200 bg-light-brown text-white hover:bg-medium-brown">Currently Watching</button>
-            <button data-filter="completed" class="px-4 py-2 rounded-lg font-medium transition-colors duration-200 bg-light-brown text-white hover:bg-medium-brown">Completed</button>
-            <button data-filter="plan-to-watch" class="px-4 py-2 rounded-lg font-medium transition-colors duration-200 bg-light-brown text-white hover:bg-medium-brown">Plan to Watch</button>
-            <button data-filter="dropped" class="px-4 py-2 rounded-lg font-medium transition-colors duration-200 bg-light-brown text-white hover:bg-medium-brown">Dropped</button>
+        <!-- Create List Form -->
+        <div class="bg-white rounded-lg shadow p-4 mb-6">
+            <form id="createListForm" class="flex gap-4">
+                <input type="text" id="listName" placeholder="Create a new list (e.g., Top 10)" required class="w-full px-4 py-2 border-2 border-light-brown rounded-lg focus:border-dark-green focus:outline-none">
+                <button type="submit" class="bg-dark-green text-white font-semibold px-6 py-2 rounded-lg hover:bg-medium-green whitespace-nowrap">Create List</button>
+            </form>
         </div>
 
+        <!-- Filter Tabs -->
+        <div class="mb-6">
+            <div id="filter-container" class="flex flex-wrap gap-2 mb-3">
+                 <button data-filter="all" class="px-4 py-2 rounded-lg font-medium transition-colors duration-200">All Shows</button>
+                <button data-filter="watching" class="px-4 py-2 rounded-lg font-medium transition-colors duration-200">Currently Watching</button>
+                <button data-filter="completed" class="px-4 py-2 rounded-lg font-medium transition-colors duration-200">Completed</button>
+                <button data-filter="plan-to-watch" class="px-4 py-2 rounded-lg font-medium transition-colors duration-200">Plan to Watch</button>
+                <button data-filter="dropped" class="px-4 py-2 rounded-lg font-medium transition-colors duration-200">Dropped</button>
+            </div>
+            <div id="custom-lists-container" class="flex flex-wrap gap-2 border-t pt-3 mt-3"></div>
+        </div>
+
+        <!-- Shows List -->
         <div id="showsList" class="space-y-4"></div>
 
+        <!-- Empty State -->
         <div id="emptyState" class="text-center py-12 hidden">
             <div class="text-6xl mb-4">📺</div>
             <h3 class="text-xl font-semibold text-medium-brown mb-2">No shows in this category!</h3>
             <p class="text-medium-brown">Add a new show or select a different filter.</p>
         </div>
     
+        <!-- Edit Show Modal -->
         <div id="editModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 hidden">
             <div class="bg-white rounded-lg shadow-2xl p-6 w-full max-w-lg border-t-8 border-dark-green">
                 <h2 class="text-2xl font-semibold text-dark-green mb-4">Edit Show</h2>
@@ -115,6 +132,43 @@
                         <button type="submit" class="px-6 py-2 bg-dark-green text-white rounded-lg hover:bg-medium-green">Save Changes</button>
                     </div>
                 </form>
+            </div>
+        </div>
+
+        <!-- Add to List Modal -->
+        <div id="addToListModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 hidden">
+            <div class="bg-white rounded-lg shadow-2xl p-6 w-full max-w-sm border-t-8 border-dark-green">
+                <h2 class="text-2xl font-semibold text-dark-green mb-4">Add Show to a List</h2>
+                <form id="addToListForm">
+                    <div id="modalListContainer" class="space-y-2 mb-6 max-h-48 overflow-y-auto">
+                        <!-- List options will be injected here by JavaScript -->
+                    </div>
+                    <div class="flex justify-end gap-4">
+                        <button type="button" id="cancelAddToList" class="px-6 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300">Cancel</button>
+                        <button type="submit" class="px-6 py-2 bg-dark-green text-white rounded-lg hover:bg-medium-green">Add to List</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+        
+        <!-- Notification Modal -->
+        <div id="notificationModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 hidden">
+            <div class="bg-white rounded-lg shadow-2xl p-6 w-full max-w-sm text-center">
+                <div id="notificationIcon" class="text-4xl mb-4"></div>
+                <p id="notificationMessage" class="text-lg text-dark-brown mb-6"></p>
+                <button id="notificationCloseBtn" class="px-6 py-2 bg-dark-green text-white rounded-lg hover:bg-medium-green">OK</button>
+            </div>
+        </div>
+
+        <!-- Confirmation Modal -->
+        <div id="confirmationModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 hidden">
+            <div class="bg-white rounded-lg shadow-2xl p-6 w-full max-w-sm text-center">
+                <div class="text-4xl mb-4">🤔</div>
+                <p id="confirmationMessage" class="text-lg text-dark-brown mb-6"></p>
+                <div class="flex justify-center gap-4">
+                    <button id="confirmCancelBtn" class="px-6 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300">Cancel</button>
+                    <button id="confirmActionBtn" class="px-6 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700">Confirm</button>
+                </div>
             </div>
         </div>
     </div>
