6th logo and coloring

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 </head>
 <body class="bg-gradient-to-br from-black via-[#3d2c0b] to-yellow-700 text-white min-h-screen flex flex-col font-sans">
 
-    <header class="p-6">
+    <header class="p-6 flex justify-between items-center">
         <h1 class="text-2xl font-bold">ShowTracker</h1>
+
+        <!-- Your Logo -->
+        <div class="bg-white rounded-full p-1 shadow-lg">
+             <img src="ipiremote.png" alt="IPI Remote Logo" class="h-10">
+        </div>
     </header>
 
     <main class="flex-grow flex items-center justify-center">
@@ -28,6 +33,10 @@
             </form>
         </div>
     </main>
+
+    <footer class="text-center p-4 text-white text-opacity-50 text-sm">
+        IPI Productions
+    </footer>
 
     <script src="login.js"></script>
 </body>
