--- a/tracker.html
+++ b/tracker.html
@@ -23,25 +23,30 @@
         }
     </script>
 </head>
-<body class="bg-beige min-h-screen font-sans">
+<body class="bg-gradient-to-br from-black via-[#3d2c0b] to-yellow-700 min-h-screen font-sans">
     <div class="container mx-auto px-4 py-8 max-w-4xl">
         <!-- Header -->
         <div class="text-center mb-8">
             <div class="flex justify-between items-center mb-2">
-                <div id="welcomeMessage" class="text-left text-medium-brown"></div>
-                <button id="signOutBtn" class="px-4 py-2 bg-light-brown text-white text-sm rounded-lg hover:bg-medium-brown">Sign Out</button>
+                <div id="welcomeMessage" class="text-left text-gray-300"></div>
+                <button id="signOutBtn" class="px-4 py-2 bg-yellow-600 text-black text-sm font-bold rounded-lg hover:bg-yellow-700">Sign Out</button>
             </div>
-            <h1 class="text-4xl font-bold text-dark-green mb-2">📺 TV Show Tracker</h1>
-            <p class="text-medium-brown text-lg">Keep track of your favorite shows, rate them, and add notes</p>
+            <h1 class="text-4xl font-bold text-white mb-2 flex items-center justify-center gap-x-4">
+                <div class="bg-white rounded-full p-1 shadow-lg">
+                    <img src="ipiremote.png" alt="IPI Remote Logo" class="h-12">
+                </div>
+                <span>Show Tracker</span>
+            </h1>
+            <p class="text-gray-300 text-lg">Keep track of your favorite shows, rate them, and add notes</p>
         </div>
 
         <!-- Add Show Form -->
-        <div class="bg-white rounded-lg shadow-lg p-6 mb-8 border-2 border-light-green">
+        <div class="bg-beige rounded-lg shadow-lg p-6 mb-8 border-2 border-gray-700">
             <h2 class="text-2xl font-semibold text-dark-green mb-4">Add New Show</h2>
             <form id="addShowForm">
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
-                    <input type="text" id="showTitle" placeholder="Show Title" class="px-4 py-3 border-2 border-light-brown rounded-lg focus:border-dark-green focus:outline-none">
-                    <select id="showStatus" class="px-4 py-3 border-2 border-light-brown rounded-lg focus:border-dark-green focus:outline-none">
+                    <input type="text" id="showTitle" placeholder="Show Title" class="px-4 py-3 border-2 border-gray-400 rounded-lg focus:border-dark-green focus:outline-none">
+                    <select id="showStatus" class="px-4 py-3 border-2 border-gray-400 rounded-lg focus:border-dark-green focus:outline-none">
                         <option value="">Select Status</option>
                         <option value="watching">Currently Watching</option>
                         <option value="completed">Completed</option>
@@ -52,29 +57,29 @@
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-4 mb-4">
                     <div>
                         <label class="block text-medium-brown font-medium mb-1">Rating (1-10)</label>
-                        <input type="number" id="showRating" min="1" max="10" placeholder="Optional" class="w-full px-4 py-3 border-2 border-light-brown rounded-lg focus:border-dark-green focus:outline-none">
+                        <input type="number" id="showRating" min="1" max="10" placeholder="Optional" class="w-full px-4 py-3 border-2 border-gray-400 rounded-lg focus:border-dark-green focus:outline-none">
                     </div>
                     <div>
                         <label class="block text-medium-brown font-medium mb-1">Genre</label>
-                        <input type="text" id="showGenre" placeholder="e.g., Drama" class="w-full px-4 py-3 border-2 border-light-brown rounded-lg focus:border-dark-green focus:outline-none">
+                        <input type="text" id="showGenre" placeholder="e.g., Drama" class="w-full px-4 py-3 border-2 border-gray-400 rounded-lg focus:border-dark-green focus:outline-none">
                     </div>
                      <div>
                         <label class="block text-medium-brown font-medium mb-1">Poster</label>
-                        <input type="file" id="showPoster" accept="image/*" class="w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-beige file:text-dark-green hover:file:bg-opacity-80">
+                        <input type="file" id="showPoster" accept="image/*" class="w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:rounded-lg file:border-0 file:text-sm file:font-semibold file:bg-gray-200 file:text-dark-green hover:file:bg-opacity-80">
                     </div>
                 </div>
                 <div class="mb-4">
                     <label class="block text-medium-brown font-medium mb-1">Notes</label>
-                    <textarea id="showNotes" rows="3" placeholder="Add your thoughts..." class="w-full px-4 py-3 border-2 border-light-brown rounded-lg focus:border-dark-green focus:outline-none resize-none"></textarea>
+                    <textarea id="showNotes" rows="3" placeholder="Add your thoughts..." class="w-full px-4 py-3 border-2 border-gray-400 rounded-lg focus:border-dark-green focus:outline-none resize-none"></textarea>
                 </div>
                 <button type="submit" class="w-full bg-dark-green text-white py-3 px-6 rounded-lg font-semibold hover:bg-medium-green transition-colors duration-200">Add Show to Tracker</button>
             </form>
         </div>
 
         <!-- Create List Form -->
-        <div class="bg-white rounded-lg shadow p-4 mb-6">
+        <div class="bg-beige rounded-lg shadow p-4 mb-6 border-2 border-gray-700">
             <form id="createListForm" class="flex gap-4">
-                <input type="text" id="listName" placeholder="Create a new list (e.g., Top 10)" required class="w-full px-4 py-2 border-2 border-light-brown rounded-lg focus:border-dark-green focus:outline-none">
+                <input type="text" id="listName" placeholder="Create a new list (e.g., Top 10)" required class="w-full px-4 py-2 border-2 border-gray-400 rounded-lg focus:border-dark-green focus:outline-none">
                 <button type="submit" class="bg-dark-green text-white font-semibold px-6 py-2 rounded-lg hover:bg-medium-green whitespace-nowrap">Create List</button>
             </form>
         </div>
@@ -88,7 +93,7 @@
                 <button data-filter="plan-to-watch" class="px-4 py-2 rounded-lg font-medium transition-colors duration-200">Plan to Watch</button>
                 <button data-filter="dropped" class="px-4 py-2 rounded-lg font-medium transition-colors duration-200">Dropped</button>
             </div>
-            <div id="custom-lists-container" class="flex flex-wrap gap-2 border-t pt-3 mt-3"></div>
+            <div id="custom-lists-container" class="flex flex-wrap gap-2 border-t border-gray-600 pt-3 mt-3"></div>
         </div>
 
         <!-- Shows List -->
@@ -97,11 +102,11 @@
         <!-- Empty State -->
         <div id="emptyState" class="text-center py-12 hidden">
             <div class="text-6xl mb-4">📺</div>
-            <h3 class="text-xl font-semibold text-medium-brown mb-2">No shows in this category!</h3>
-            <p class="text-medium-brown">Add a new show or select a different filter.</p>
+            <h3 class="text-xl font-semibold text-gray-200 mb-2">No shows in this category!</h3>
+            <p class="text-gray-300">Add a new show or select a different filter.</p>
         </div>
     
-        <!-- Edit Show Modal -->
+        <!-- All Modals (Unchanged) -->
         <div id="editModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 hidden">
             <div class="bg-white rounded-lg shadow-2xl p-6 w-full max-w-lg border-t-8 border-dark-green">
                 <h2 class="text-2xl font-semibold text-dark-green mb-4">Edit Show</h2>
@@ -134,15 +139,11 @@
                 </form>
             </div>
         </div>
-
-        <!-- Add to List Modal -->
         <div id="addToListModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 hidden">
             <div class="bg-white rounded-lg shadow-2xl p-6 w-full max-w-sm border-t-8 border-dark-green">
                 <h2 class="text-2xl font-semibold text-dark-green mb-4">Add Show to a List</h2>
                 <form id="addToListForm">
-                    <div id="modalListContainer" class="space-y-2 mb-6 max-h-48 overflow-y-auto">
-                        <!-- List options will be injected here by JavaScript -->
-                    </div>
+                    <div id="modalListContainer" class="space-y-2 mb-6 max-h-48 overflow-y-auto"></div>
                     <div class="flex justify-end gap-4">
                         <button type="button" id="cancelAddToList" class="px-6 py-2 bg-gray-200 text-gray-800 rounded-lg hover:bg-gray-300">Cancel</button>
                         <button type="submit" class="px-6 py-2 bg-dark-green text-white rounded-lg hover:bg-medium-green">Add to List</button>
@@ -150,8 +151,6 @@
                 </form>
             </div>
         </div>
-        
-        <!-- Notification Modal -->
         <div id="notificationModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 hidden">
             <div class="bg-white rounded-lg shadow-2xl p-6 w-full max-w-sm text-center">
                 <div id="notificationIcon" class="text-4xl mb-4"></div>
@@ -159,8 +158,6 @@
                 <button id="notificationCloseBtn" class="px-6 py-2 bg-dark-green text-white rounded-lg hover:bg-medium-green">OK</button>
             </div>
         </div>
-
-        <!-- Confirmation Modal -->
         <div id="confirmationModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 hidden">
             <div class="bg-white rounded-lg shadow-2xl p-6 w-full max-w-sm text-center">
                 <div class="text-4xl mb-4">🤔</div>
